Fix warnings produced by NetX and the plugin (both Java and C++).
2010-12-01  Andrew John Hughes  <ahughes@redhat.com>

	* netx/net/sourceforge/jnlp/cache/CacheUtil.java:
	(getCachedResource(URL,Version,UpdatePolicy)): Use
	toURI().toURL() to avoid broken escaping.
	* netx/net/sourceforge/jnlp/cache/ResourceTracker.java:
	(getCacheURL(URL)): Likewise.
	* netx/net/sourceforge/jnlp/runtime/ApplicationInstance.java:
	(destroy()): Suppress deprecated warning from use of thread.stop().
	Only use when interrupt() has already been tried.
	* netx/net/sourceforge/jnlp/runtime/Boot.java:
	(getFile()): Use toURI.toURL() to avoid broken escaping.
	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java:
	(initializeResources()): Likewise.
	* netx/net/sourceforge/jnlp/security/PasswordAuthenticationDialog.java:
	(askUser(String,int,String,String)): Use getPassword() to retrieve
	a character array directly.  Fix overrunning line.
	* netx/net/sourceforge/jnlp/tools/JarSigner.java:
	Remove unused IdentityScope variable, scope.
	* netx/net/sourceforge/nanoxml/XMLElement.java:
	(scanWhitespace(StringBuffer)): Don't fallthrough.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc:
	Fix warnings where std::string is used in printf
	rather than char* by invoking c_str on these strings.
	* plugin/icedteanp/java/netscape/javascript/JSException.java:
	(JSException()): Mark with @Deprecated annotation.
	(JSException(String)): Likewise.
	(JSException(String,String,int,String,int)): Likewise.
	* plugin/icedteanp/java/netscape/javascript/JSObject.java:
	(JSObject(String)): Remove redundant cast.
	(getWindow(Applet)): Likewise.
	* plugin/icedteanp/java/sun/applet/AppletSecurityContextManager.java:
	(contexts): Initialise properly with generic typing.
	* plugin/icedteanp/java/sun/applet/MethodOverloadResolver.java:
	(getMatchingMethod(Object[]): Add missing generic type to Class
	instances.
	(getMatchingConstructor(Object[])): Likewise.
	(getCostAndCastedObject(Object,Class<?>)): Likewise.
	(g